<resources>
    <string name="app_name">Cryptocurrencies</string>
    <string name="settings">Settings</string>
    <string name="main">Main</string>
    <string name="cryptocurrencies">Cryptocurrencies</string>
    <string name="save_user_error">Name must be between 1 and 20 characters long</string>
    <string name="save_user_success">User successfully saved</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="save">Save</string>
    <string name="select_your_birth_day">Select your birth day</string>
    <string name="avatar">User avatar</string>
    <string name="download_photo">Download photo</string>
    <string name="take_a_picture">Take a picture</string>
    <string name="pick_from_gallery">Pick from gallery</string>
    <string name="update_avatar">Avatar updated</string>
    <string name="order_id_ascending">By name ascending</string>
    <string name="order_id_descending">By name descending</string>
    <string name="order_capitalization_ascending">By capitalization ascending</string>
    <string name="order_capitalization_descending">By capitalization descending</string>
    <string name="order_volume_ascending">By volume ascending</string>
    <string name="order_volume_descending">By volume descending</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="error">Error</string>
    <string name="sort">Sort</string>
    <string name="try_again">Try Again</string>
    <string name="no_connection_to_the_internet">No connection to the internet</string>
    <string name="chart_1d">24H</string>
    <string name="chart_1w">1W</string>
    <string name="chart_1m">1M</string>
    <string name="chart_1y">1Y</string>
    <string name="chart_max">ALL</string>
    <string-array name="avatar_dialog_array">
        <item>@string/take_a_picture</item>
        <item>@string/pick_from_gallery</item>
    </string-array>
    <!--  Uri handling for result activity API  -->
    <string name="avatar_image_path">avatar.jpg</string>
    <string name="authorities">com.danilovfa.fileprovider</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="market_cap">Market cap</string>
</resources>