<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".app.fragment.DetailsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/detailsLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"
        tools:visibility="visible">

        <TextView
            android:id="@+id/priceTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/roboto_regular"
            tools:text="99999.99 $"
            android:textColor="@color/black"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/priceChangedPercentageTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/roboto_regular"
            tools:text="+999.99 %"
            android:textColor="@color/green"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/priceTextView" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/chartLayout"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/priceChangedPercentageTextView">

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/chart"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/chartPriceMaxTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/roboto_regular"
                android:textColor="@color/grey_2"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="80000 $" />

            <TextView
                android:id="@+id/chartPriceLowTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/roboto_regular"
                android:textColor="@color/grey_2"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="5000 $" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chartLayout">

            <RadioButton
                android:id="@+id/radioButton24h"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="54dp"
                android:background="@drawable/radio_button_selector"
                android:button="@color/transparent"
                android:checked="true"
                android:fontFamily="@font/roboto_regular"
                android:minHeight="32dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/chart_1d"
                android:textAlignment="center"
                android:textColor="@color/radio_button_text_selector"
                android:textSize="16sp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <RadioButton
                android:id="@+id/radioButton1w"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="54dp"
                android:background="@drawable/radio_button_selector"
                android:button="@color/transparent"
                android:checked="false"
                android:fontFamily="@font/roboto_regular"
                android:minHeight="32dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/chart_1w"
                android:textAlignment="center"
                android:textColor="@color/radio_button_text_selector"
                android:textSize="16sp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <RadioButton
                android:id="@+id/radioButton1m"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="54dp"
                android:background="@drawable/radio_button_selector"
                android:button="@color/transparent"
                android:checked="false"
                android:fontFamily="@font/roboto_regular"
                android:minHeight="32dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/chart_1m"
                android:textAlignment="center"
                android:textColor="@color/radio_button_text_selector"
                android:textSize="16sp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <RadioButton
                android:id="@+id/radioButton1y"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="54dp"
                android:background="@drawable/radio_button_selector"
                android:button="@color/transparent"
                android:checked="false"
                android:fontFamily="@font/roboto_regular"
                android:minHeight="32dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/chart_1y"
                android:textAlignment="center"
                android:textColor="@color/radio_button_text_selector"
                android:textSize="16sp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <RadioButton
                android:id="@+id/radioButtonAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="54dp"
                android:background="@drawable/radio_button_selector"
                android:button="@color/transparent"
                android:checked="false"
                android:fontFamily="@font/roboto_regular"
                android:minHeight="32dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/chart_max"
                android:textAlignment="center"
                android:textColor="@color/radio_button_text_selector"
                android:textSize="16sp" />

        </RadioGroup>

        <View
            android:id="@+id/view"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:background="@color/grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/market_cap"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view" />

        <TextView
            android:id="@+id/marketCapTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/roboto_regular"
            tools:text="$ 999.99 B"
            android:textColor="@color/green"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/detailsProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/green"
        android:indeterminateTintMode="src_atop"
        android:visibility="visible"
        tools:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>